fix homepage right spacing on mobile

--- a/app/assets/stylesheets/sections/private-financing.sass
+++ b/app/assets/stylesheets/sections/private-financing.sass
@@ -4,6 +4,7 @@
 
   .wrapper
     padding: 65px 65px 45px 65px
+    position: relative
 
     +desktop-small
       padding: 50px 40px 40px 40px
